--- a/review/src/main/resources/application.properties
+++ b/review/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/moviereview?autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+spring.thymeleaf.prefix=classpath:templates/
+spring.thymeleaf.suffix=.html
