--- a/review/src/main/resources/errors.properties
+++ b/review/src/main/resources/errors.properties
@@ -1,7 +1,26 @@
-login.id=id는 필수로 작성해야 합니다.
-login.id.equal=이미 존재하는 id 입니다. 다시 작성해주세요
+requiredId.userInfo.id=id는 필수로 작성해야 합니다.
+requiredPw.userInfo.password=비밀번호는 필수로 작성해야 합니다. 또한 최대길이는 {0} 입니다.
+requiredEmail.userInfo.email=이메일은 필수로 작성해야 합니다.
 
-login.password=비밀번호는 필수로 작성해야 합니다. 또한 최대길이는 {0} 입니다.
-login.email=이메일은 필수로 작성해야 합니다.
+equal.userInfo.id=이미 존재하는 id 입니다. 다시 작성해주세요
 
-login.result.id=존재하지 않는 id입니다.
+
+#login
+pwNull.userInfo.password=비밀번호를 입력해주세요.
+idNull.userInfo.id=아이디를 입력해주세요.
+
+userLoginWorn.userInfo.id=id나 pw를 잘못 입력하셨습니다.
+
+mangerLoginWorn.mangerInfo.id=id나 pw를 잘못 입력하셨습니다.
+
+noSuchId.userInfo=존재하지 않는 id입니다.
+
+
+#login의 objectError
+allNull.userInfo=id나 pw를 입력해주세요.
+#Join의 objectError
+allEmpty.userInfo=값들을 입력해주세요.
+
+typeMismatch.java.lang.String=문자를 입력해 주세요.
+typeMismatch.java.lang.Integer=숫자를 입력해주세요.
+typeMismatch=타입 오류입니다.
