--- a/review/src/main/resources/application.properties
+++ b/review/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.thymeleaf.prefix=classpath:templates/
 spring.thymeleaf.suffix=.html
 
 spring.messages.basename=errors
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=20MB
