--- a/review/src/main/resources/application.properties
+++ b/review/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.messages.basename=errors
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
+
+
+FilePath=C:\\MyProject\\FilmReview\\review\\src\\main\\resources\\static\\moviePhoto\\
