검증 전체 처리 -0

--- a/review/src/main/resources/errors.properties
+++ b/review/src/main/resources/errors.properties
@@ -1,26 +1,14 @@
-requiredId.userInfo.id=id는 필수로 작성해야 합니다.
-requiredPw.userInfo.password=비밀번호는 필수로 작성해야 합니다. 또한 최대길이는 {0} 입니다.
-requiredEmail.userInfo.email=이메일은 필수로 작성해야 합니다.
-
+#Join
 equal.userInfo.id=이미 존재하는 id 입니다. 다시 작성해주세요
-
+equal.mangerInfo.id=이미 존재하는 id 입니다. 다시 작성해주세요
 
 #login
-pwNull.userInfo.password=비밀번호를 입력해주세요.
-idNull.userInfo.id=아이디를 입력해주세요.
+GlobalUserLoginWorn.loginUserInfo=아이디나 비밀번호를 잘못 입력하셨습니다.
+GlobalMangerLoginWorn.loginUserInfo=아이디나 비밀번호를 잘못 입력하셨습니다.
 
-userLoginWorn.userInfo.id=id나 pw를 잘못 입력하셨습니다.
+noSuchId.loginUserInfo=존재하지 않는 회원 입니다. 회원가입을 진행해 주세요!
 
-mangerLoginWorn.mangerInfo.id=id나 pw를 잘못 입력하셨습니다.
-
-noSuchId.userInfo=존재하지 않는 id입니다.
-
-
-#login의 objectError
-allNull.userInfo=id나 pw를 입력해주세요.
-#Join의 objectError
-allEmpty.userInfo=값들을 입력해주세요.
-
+#type Error
 typeMismatch.java.lang.String=문자를 입력해 주세요.
 typeMismatch.java.lang.Integer=숫자를 입력해주세요.
 typeMismatch=타입 오류입니다.
