--- a/review/src/main/resources/application.properties
+++ b/review/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/moviereview?autoReconnect=true
+#spring.datasource.url=jdbc:mysql://101.101.165.5:3306/moviereview?autoReconnect=true
+spring.datasource.url=jdbc:mysql://118.67.133.219:3306/moviereview?autoReconnect=true
+#spring.datasource.url=jdbc:mysql://101.101.165.5:3306/moviereview?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=1234wlstjddl
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.thymeleaf.prefix=classpath:templates/
