--- a/review/src/main/resources/application.properties
+++ b/review/src/main/resources/application.properties
@@ -5,10 +5,22 @@ spring.datasource.username=root
 spring.datasource.password=1234wlstjddl
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+#동적파일 경로
 spring.thymeleaf.prefix=classpath:templates/
 spring.thymeleaf.suffix=.html
 
 spring.messages.basename=errors
+
+#Email 인증
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=toyproject2022@gmail.com
+spring.mail.password=2202tcejorpyot
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+
+
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
