회원가입 구현완료

--- a/review/src/main/resources/errors.properties
+++ b/review/src/main/resources/errors.properties
@@ -2,6 +2,9 @@
 equal.userInfo.id=이미 존재하는 id 입니다. 다시 작성해주세요
 equal.mangerInfo.id=이미 존재하는 id 입니다. 다시 작성해주세요
 
+NoEmailJoin.userInfo.joinCode=먼저 이메일 인증을 진행해 주세요.
+EmailJoin.userInfo.joinCode=먼저 이메일 인증을 성공해 주세요.
+
 #login
 GlobalUserLoginWorn.loginUserInfo=아이디나 비밀번호를 잘못 입력하셨습니다.
 GlobalMangerLoginWorn.loginUserInfo=아이디나 비밀번호를 잘못 입력하셨습니다.
