영화정보 여러개 조회 구현완료

--- a/review/src/main/resources/application.properties
+++ b/review/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.username=root
 spring.datasource.password=1234wlstjddl
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+spring.jpa.show-sql=true 
+spring.jpa.hibernate.ddl-auto=none
+
 #동적파일 경로
 spring.thymeleaf.prefix=classpath:templates/
 spring.thymeleaf.suffix=.html
