--- a/review/src/main/resources/application.properties
+++ b/review/src/main/resources/application.properties
@@ -23,7 +23,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
 
-
+#세션 타임아웃 설정
+server.servlet.session.timeout=1800
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
