리뷰기능 구현중..

--- a/review/src/main/resources/application.properties
+++ b/review/src/main/resources/application.properties
@@ -29,5 +29,6 @@ server.servlet.session.timeout=1800
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
 
+spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 FilePath=C:\\MyProject\\FilmReview\\review\\src\\main\\resources\\static\\moviePhoto\\
