메인페이지 hikari 교착상태 해결

--- a/review/src/main/resources/errors.properties
+++ b/review/src/main/resources/errors.properties
@@ -7,6 +7,8 @@ JoinForm.fail=회원가입 실패
 GlobalLoginError.loginFail=아이디나 비밀번호를 잘못 입력하셨습니다.
 GlobalLoginError.noSuchId=존재하지 않는 회원 입니다. 회원가입을 진행해 주세요!
 
+#NoLogin
+reviewUser.noUser=로그인을 안했습니다.
 
 #type Error
 typeMismatch.java.lang.String=문자를 입력해 주세요.
