웹소켓 다른거로 변경 ( 메시지 전 후로 검증필요해서 전체 리펙토링.. )

--- a/review/src/main/resources/application.properties
+++ b/review/src/main/resources/application.properties
@@ -6,6 +6,11 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true 
 spring.jpa.hibernate.ddl-auto=none
 
+#redis 정보
+spring.redis.host=118.67.133.219
+spring.redis.port=6378
+spring.redis.password=1234
+
 #동적파일 경로
 spring.thymeleaf.prefix=classpath:templates/
 spring.thymeleaf.suffix=.html
