--- a/review/build.gradle
+++ b/review/build.gradle
@@ -46,6 +46,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.3.1.RELEASE'
+
+	// 암호화
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.4.5'
 }
 
 test {
