도커파일 변경

--- a/review/Dockerfile
+++ b/review/Dockerfile
@@ -1,4 +1,7 @@
-FROM openjdk:11-jdk-alpine
+FROM openjdk:11-jre-slim
 ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} app.jar
+COPY build/libs/*.jar application.jar
+
+EXPOSE 8123
+
 ENTRYPOINT ["java","-jar","/app.jar"]
