--- a/review/Dockerfile
+++ b/review/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:11-jre-slim
-ARG JAR_FILE=target/*.jar
-COPY build/libs/*.jar application.jar
+ARG JAR_FILE=build/libs/review-0.0.1-SNAPSHOT.jar
+COPY ${JAR_FILE} /app.jar
 
 EXPOSE 8123
 
